--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -253,7 +253,6 @@ input, select, textarea {
 	}
 
 	blockquote {
-		border-left: solid 4px #ffffff;
 		font-style: italic;
 		margin: 0 0 2rem 0;
 		padding: 0.5rem 0 0.5rem 2rem;
@@ -702,6 +701,7 @@ input, select, textarea {
 
 			.image.main img {
 				width: 100%;
+				height: 40vh;
 			}
 
 		@media screen and (max-width: 736px) {
@@ -1106,6 +1106,7 @@ input, select, textarea {
 		line-height: calc(2.75rem - 2px);
 	}
 
+/*   ---------------   My Button Styles   --------------------- */
 
 	a.git-button {
 		border: 1px solid #fff;
@@ -1117,6 +1118,20 @@ input, select, textarea {
 	}
 
 	a.git-button:hover {
+		background-color: #153C1D;
+	}
+
+	a.resume-button {
+		border: 1px solid #fff;
+		padding: .5em 3.5em;
+		margin-right: 7%;
+	}
+
+	a.resume-button i {
+		margin-right: 2%;
+	}
+
+	a.resume-button:hover {
 		background-color: #153C1D;
 	}
 
@@ -1622,7 +1637,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#main article {
-				padding: 3.5rem 2rem 0.5rem 2rem ;
+				padding: 3.5rem 2rem 1.5rem 2rem ;
 			}
 
 				#main article .close:before {
@@ -1638,7 +1653,7 @@ input, select, textarea {
 		@media screen and (max-width: 480px) {
 
 			#main article {
-				padding: 3rem 1.5rem 0.5rem 1.5rem ;
+				padding: 3rem 1.5rem 1.5rem 1.5rem ;
 			}
 
 		}
